# data_lakehouse

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .trivyignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  airflow.env.example  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docker-build.yml
dags/: bronze_silver_brasileirao_processing.py  callbacks.py  gold_dbt_brasileirao_processing.py  iceberg_maintenance.py  staging_brasileirao_ingestion.py
dbt_project/: dbt_project.yml  profiles.yml
dbt_project/models/gold/: mart_classificacao_brasileirao.sql  schema.yml
dbt_project/models/staging/: schema.yml  sources.yml  stg_silver_brasileirao.sql
dbt_project/tests/: assert_classificacao_unique_season_team.sql
docker/: Dockerfile.airflow  Dockerfile.spark  minio-policy.json
docker/airflow/: generate_auth_file.py
docker/dremio/: setup_sources.sh
quality/checks/: bronze_brasileirao.yml  silver_brasileirao.yml
scripts/: validate_secrets.py
src/: __init__.py
src/bronze/: __init__.py  ingest_brasileirao.py
src/config/: settings.py
src/db/: ddl.py
src/maintenance/: iceberg_maintenance.py
src/silver/: __init__.py  stadium_enrichment.py  transform_brasileirao.py
src/staging/: __init__.py  fetch_brasileirao.py
src/utils/: alerting.py  data_quality.py  logging_config.py  minio_client.py  nessie_branch.py  quality_runner.py  spark_session.py
tests/: conftest.py
tests/integration/: conftest.py  test_bronze_silver_brasileirao_e2e.py  test_dagbag.py
tests/unit/: test_alerting.py  test_dags.py  test_data_quality.py  test_ddl.py  test_fetch_brasileirao.py  test_iceberg_maintenance.py  test_ingest_brasileirao.py  test_logging_config.py  test_minio_client.py  test_nessie_branch.py  test_quality_runner.py  test_settings.py  test_spark_session.py  test_stadium_enrichment.py  test_transform_brasileirao.py
